feat: Phase B fallback prompt fix + Phase C follow-up question detection
Phase B fixes:
- RoundPromptBuilder: add buildFallbackSystemPrompt() with unified output
  format (replaces contradictory Round1+Round2 prompt concatenation)
- ClaudeAnalyzeNode: singleRoundFallback uses fallback prompt + reuses
  buildRound2UserPrompt for code context; remove orphaned buildCodeContextSection

Phase C — Phase2 V2 follow-up question detection:
- ChainSplitter: add isFollowUpQuestion() + selectTopN(); split() now
  accepts inheritedData param and routes follow-up vs search questions
  differently (follow-up inherits Phase1 top-10, search uses keywords)
- Phase2V2Orchestrator: skeleton report reflects real chainCount/summaries
  (PENDING state); extract phase1Summary from Phase1 checkpoint; enhance
  follow-up question with Phase1 context
- ChainContext.Phase1InheritedData: add phase1Summary field
- RamPhase2V2Controller: four-state determination (FAILED/PENDING/DONE)
  replaces binary FAILED/DONE
- Phase2Page.vue: handle PENDING status — show split chain list with
  "拆分完成，等待分析" tag

AI-Generated: true
AI-Tool: claude-code
AI-Model: mimo-v2.5-pro
AI-Lines: 285
AI-Lines-Deleted: 116
AI-Total-Lines: 332
AI-Total-Lines-Deleted: 132
AI-Files: 7
AI-File-List: ram/Phase2Page.vue, nodes/ClaudeAnalyzeNode.java, nodes/RoundPromptBuilder.java, controller/RamPhase2V2Controller.java, phase2v2/ChainSplitter.java (+2 more)
AI-Developer: 47583@laptop-c2kj599j